--- a/css/appli.css
+++ b/css/appli.css
@@ -1,8 +1,9 @@
-#map { height: 400px; width:800px }
+#map { height: 350px; width:600px; margin-top: 10px; margin-bottom: 30px; }
 
 #fileInput {
   border: 1px solid #000000; 
   padding: 10px;
+  width: 220px;
 }
 
 #SpanSize {
