--- a/css/density.css
+++ b/css/density.css
@@ -1,7 +1,6 @@
 #map { 
   height: 350px; 
-  width:800px; 
-  margin-top: 10px; 
+  width:100%; 
   margin-bottom: 30px; 
 }
 
@@ -13,4 +12,13 @@
 
 #info {
   float:right;
+}
+
+#CouleurValues {
+  color: #000000;
+}
+
+body {
+  padding: 10px;
+  max-width: 1000px;
 }
